# Repo_Runner-CLI

./: AGENTIC_SYSTEM_ROADMAP.md  ARCHITECTURE.md  COLAB_TESTING_GUIDE.md  CONFIGURATION_GUIDE.md  README.md  ROADMAP.md  TRACKER.md  agent_state_EnvDetectorAgent.json  final_system_test.py  pyproject.toml  repo_runner_colab_minimal_test.ipynb  repo_runner_colab_minimal_test00.ipynb  repo_runner_colab_minimal_test0011.ipynb  repo_runner_colab_minimal_test001122.ipynb  repo_runner_colab_test.ipynb  repo_runner_colab_test_simple.ipynb  repo_runner_colab_test_updated.ipynb  repo_runner_colab_test_updated001.ipynb  repo_runner_colab_test_v2.ipynb  run_agentic.sh  sanity_test.py  test_complete_system.py  test_faiss_config.py  test_fixes.py  test_local_integration.py  test_orchestrator.py  test_port_manager.py  test_tier_system.py  update_repo.py  users.json
project/: .gitignore  .runnerconfig.yaml  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup.py
project/repo_runner/: cli.py  detectors.py  health.py  hooks.py  installers.py  logger.py  runner.py
project/repo_runner/agents/: detection_agent.py  fixer_agent.py  health_agent.py  orchestrator.py  port_manager_agent.py  runner_agent.py  setup_agent.py
project/repo_runner/llm/: llm_utils.py
repo_runner/: MODEL_GUIDE.md  __init__.py  admin_agent.py  cli.py  config_manager.py  database.py  documentation.py  environment.py  installer.py  orchestrator_cli.py  runner.py  test_config_examples.md  test_models.py  user_management.py
repo_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
repo_runner/agents/: admin_agent.py  agent_memory_manager.py  base_agent.py  config_agent.py  context_indexer.py  db_agent.py  dependency_agent.py  detection_agent.py  env_detector.py  file_agent.py  fixer_agent.py  health_agent.py  model_manager.py  orchestrator.py  port_manager_agent.py  requirements_agent.py  runner_agent.py  setup_agent.py
repo_runner/agents/llm/: llm_utils.py
repo_runner/llm/: llm_utils.py  model_config.md
repo_runner/managers/: base_manager.py  model_manager.py  orchestrator.py  orchestrator_agent.py  port_manager.py
repo_runner/repo_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
