[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_runner"
version = "1.0.0"
description = "Modular Python CLI tool for automatic repository detection and execution"
readme = "README.md"
authors = [
    {name = "repo_runner", email = "info@repo_runner.dev"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "PyYAML>=6.0",
    "python-dotenv>=0.19.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "psutil>=5.8.0",
    "colorama>=0.4.4",
    "rich>=12.0.0",
    "jinja2>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.scripts]
repo_runner = "repo_runner.cli:cli"

[project.urls]
Homepage = "https://github.com/repo_runner/repo_runner"
Documentation = "https://github.com/repo_runner/repo_runner/wiki"
Repository = "https://github.com/repo_runner/repo_runner.git"
"Bug Tracker" = "https://github.com/repo_runner/repo_runner/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_runner*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=repo_runner --cov-report=html --cov-report=term-missing"